// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component Programme within Layout match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Sub menu"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/student/kurser?l=en"
            >
              Course and programme directory
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              Degree Programme in Architecture
            </div>
          </li>
          <li
            class="nav-item leaf selected"
          >
            <a
              class="nav-link"
            >
              Programme Syllabuses
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1
                aria-labelledby="page-heading page-sub-heading"
                id="page-heading"
              >
                Programme Syllabuses
              </h1>
              <p
                aria-hidden="true"
                class="page-sub-heading"
                id="page-sub-heading"
              >
                Degree Programme in Architecture (ARKIT)
              </p>
            </header>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <article
              class="article "
            >
              <p>
                Choose programme syllabus. Batch most often equals first registration term at programme.
              </p>
              <ul
                class="link-list"
              >
                <li>
                  <a
                    href="/student/kurser/program/ARKIT/20192/arskurs2?l=en"
                  >
                    Programme syllabus for studies starting in Autumn 19
                  </a>
                </li>
                <li>
                  <a
                    href="/student/kurser/program/ARKIT/20211/arskurs1?l=en"
                  >
                    Programme syllabus for studies starting in Spring 21
                  </a>
                </li>
              </ul>
            </article>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Contact for questions regarding education at KTH: 
                <a
                  href="https://www.kth.se/en/studies/master/general-study-counselling-1.621634"
                >
                  Central study counseling
                </a>
                <br />
                Contact regarding technical matters on this page: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component Programme within Layout match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Undermeny"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/student/kurser"
            >
              Kurs- och programkatalogen
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              Arkitektutbildning
            </div>
          </li>
          <li
            class="nav-item leaf selected"
          >
            <a
              class="nav-link"
            >
              Utbildningsplaner
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1
                aria-labelledby="page-heading page-sub-heading"
                id="page-heading"
              >
                Utbildningsplaner
              </h1>
              <p
                aria-hidden="true"
                class="page-sub-heading"
                id="page-sub-heading"
              >
                Arkitektutbildning (ARKIT)
              </p>
            </header>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <article
              class="article "
            >
              <p>
                Välj utbildningsplan. Oftast överensstämmer kull med den termin då studierna påbörjades vid programmet.
              </p>
              <ul
                class="link-list"
              >
                <li>
                  <a
                    href="/student/kurser/program/ARKIT/20192/arskurs2"
                  >
                    Utbildningsplan kull HT19
                  </a>
                </li>
                <li>
                  <a
                    href="/student/kurser/program/ARKIT/20211/arskurs1"
                  >
                    Utbildningsplan kull VT21
                  </a>
                </li>
              </ul>
            </article>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Kontakt för frågor om utbildning på KTH: 
                <a
                  href="https://www.kth.se/studievagledning"
                >
                  Central studievägledning
                </a>
                <br />
                Teknisk kontakt om denna sida: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;
